# Programiranje2

./: README.md
Naloga0101/: CMakeLists.txt  naloga0101.cpp
Naloga0102/: CMakeLists.txt  naloga0102.cpp
Naloga0201/: Artwork.cpp  Artwork.h  CMakeLists.txt  naloga0201.cpp
Naloga0202/: CMakeLists.txt  WaterIntake.cpp  WaterIntake.h  naloga0202.cpp
Naloga0301/: CMakeLists.txt  Time.cpp  Time.h  naloga0301.cpp
Naloga0302/: CMakeLists.txt  TextUtility.cpp  TextUtility.h  naloga0302.cpp
Naloga0401/: Artwork.h  CMakeLists.txt  Gallery.h  naloga0401.cpp
Naloga0402/: CMakeLists.txt  Conference.cpp  Conference.h  Date.cpp  Date.h  Event.cpp  Event.h  Person.cpp  Person.h  naloga0402.cpp
Naloga0501/: Artist.cpp  Artwork.cpp  Artwork.h  CMakeLists.txt  Film.cpp  Gallery.cpp  Gallery.h  Painting.cpp  naloga0501.cpp
Naloga0502/: AirConditioner.cpp  AirConditioner.h  CMakeLists.txt  Device.cpp  Device.h  Light.cpp  Light.h  Lock.cpp  Lock.h  SmartHome.cpp  SmartHome.h  naloga0502.cpp
Naloga0601/: CMakeLists.txt  Canvas.cpp  Canvas.h  PrintUtility.h  Rectangle.cpp  Rectangle.h  Shape2D.cpp  Shape2D.h  Squere.cpp  Squere.h  naloga0601.cpp
Naloga0602/: Basketball.cpp  Basketball.h  CMakeLists.txt  Soccer.cpp  Soccer.h  SportsEvent.cpp  SportsEvent.h  TeamSport.cpp  TeamSport.h  naloga0602.cpp
Naloga0701/: CMakeLists.txt  Material.h  VectorUtil.h  naloga0701.cpp
Naloga1102/: Address.h  CMakeLists.txt  Date.cpp  Date.h  InvalidAddressException.cpp  Log.cpp  Log.h  Student.cpp  Student.h  UnparseableDateException.cpp  UnparseableDateException.h  naloga1102.cpp
(+72 files in other folders)
